table collapse button fix

--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -9,6 +9,7 @@
     padding-left: 100px;
     padding-top: 50px;
     padding-right: 130px;
+    padding-bottom: 130px;
     position: absolute;
     left: 16%;
     top: 6%;
